--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,92 @@ header .header-inner-wrapper .header-inner .middle-menu-box ul li a:hover {
 header .header-inner-wrapper .header-inner .middle-menu-box ul li a:hover:before {
   width: 100%;
 }
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper {
+  position: relative;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper a {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper:hover .dropdown-menu-wrapper {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(-50%, 0px);
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper {
+  background-color: white;
+  position: absolute;
+  left: 50%;
+  border-radius: 12px;
+  border: 1px solid #DDD;
+  background: #FFF;
+  box-shadow: 15px 15px 60px 0px rgba(133, 133, 133, 0.1);
+  top: 100%;
+  width: 216px;
+  content: "";
+  transition: 0.3s ease-in-out;
+  transform: translate(-50%, 10px);
+  visibility: hidden;
+  opacity: 0;
+}
+@media (max-width: 1024px) {
+  header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper {
+    display: none;
+  }
+}
+@media (max-width: 1199px) {
+  header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper .dropdown-box {
+    padding-left: 0;
+  }
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper .dropdown-box:last-child {
+  margin-right: 0;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li {
+  margin: 0;
+  display: block;
+  border-bottom: 1px solid #ddd;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li:last-child {
+  border-bottom: 0px solid transparent;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li a {
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  color: black;
+  font-weight: 400;
+  line-height: 26px;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li a::before {
+  display: none;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li a .image-box {
+  padding: 9px;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  background-color: white;
+  transition: 0.3s ease-in-out;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li a .image-box img {
+  width: 18px;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li a:hover {
+  text-decoration: underline;
+  font-weight: 500;
+}
+header .header-inner-wrapper .header-inner .middle-menu-box ul .dropdownwrapper .dropdown-menu-wrapper ul li a:hover .image-box {
+  background-color: #f5f6f8;
+}
 @media (max-width: 991px) {
   header .header-inner-wrapper .header-inner .right-sign-up-box {
     display: none;
@@ -288,7 +374,7 @@ header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas {
   height: 100vh;
 }
 header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-header {
-  margin-bottom: 80px;
+  margin-bottom: 34px;
 }
 header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-header .offcanvas-title a {
   display: flex;
@@ -324,12 +410,19 @@ header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offc
   box-shadow: none;
   outline: none;
 }
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 50px;
+}
 header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul {
   margin: 0;
   padding: 0;
 }
 header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li {
   list-style: none;
+  margin-bottom: 15px;
 }
 header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li a {
   display: block;
@@ -342,6 +435,147 @@ header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offc
 }
 header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li a:hover {
   color: black;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li h2:focus {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li button {
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 500;
+  padding: 0px;
+  background-color: transparent;
+  font-size: 16px;
+  border-radius: 0;
+  position: relative;
+  transition: 0.3s ease-in-out;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li button:focus {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body {
+  margin-top: 15px;
+  padding: 0;
+  border: 1px solid #ddd;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 15px 15px 60px 0px rgba(133, 133, 133, 0.1);
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 0;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li:last-child {
+  border-bottom: 0px solid transparent;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a {
+  width: 100%;
+  padding: 12px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  color: black;
+  font-weight: 400;
+  line-height: 26px;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a::before {
+  display: none;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a .image-box {
+  padding: 9px;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  background-color: white;
+  transition: 0.3s ease-in-out;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a .image-box img {
+  width: 18px;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a:hover {
+  text-decoration: underline;
+  font-weight: 500;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a:hover .image-box {
+  background-color: #f5f6f8;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a:focus {
+  text-decoration: underline;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-body ul li a:focus .image-box {
+  background-color: #f5f6f8;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-button::after {
+  font-size: 24px;
+  background-image: unset;
+  content: "\e313";
+  position: absolute;
+  right: 0;
+  transform: translateY(-25%);
+  font-family: "Material Icons";
+  color: rgba(0, 0, 0, 0.8);
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-button:not(.collapsed) {
+  box-shadow: none;
+  color: rgba(0, 0, 0, 0.8);
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion-button:not(.collapsed)::after {
+  content: "\e316";
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion {
+  background-color: transparent;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion .accordion-item {
+  background-color: transparent;
+  border: none;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .menu-wrapper ul li .accordion .accordion-item .accordion-header:focus {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .mobile-menu-link a {
+  display: block;
+  width: 100%;
+  text-align: center;
+  line-height: 26px;
+  font-weight: 500;
+  color: white;
+  padding: 10px 29px;
+  border: 1px solid #4182FF;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .mobile-menu-link a::before {
+  background-color: #4182FF;
+  z-index: -1;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  content: "";
+  width: 110%;
+  height: 110%;
+  transition: 0.3s ease-in-out;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .mobile-menu-link a:hover {
+  color: #4182FF;
+}
+header .header-inner-wrapper .header-inner .mobile-menu-wrapper .offcanvas .offcanvas-body .mobile-menu-link a:hover::before {
+  width: 0;
 }
 header .scrolled {
   background-color: white;
@@ -983,6 +1217,97 @@ header .scrolled {
     height: 11px;
   }
 }
+.billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .unit-box .dot-animation-box {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+.billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .unit-box .dot-animation-box .dot-box {
+  width: 6px;
+  height: 6px;
+  background-color: #DB1D28;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .unit-box .dot-animation-box .dot-animation {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  content: "";
+  background-color: rgba(219, 29, 40, 0.7);
+  z-index: 1;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  -webkit-animation: waves 2s ease-in-out infinite;
+  animation: waves 2s ease-in-out infinite;
+}
+@keyframes waves {
+  0% {
+    -webkit-transform: scale(0.2, 0.2);
+    transform: scale(0.2, 0.2);
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  }
+  100% {
+    -webkit-transform: scale(0.9, 0.9);
+    transform: scale(0.9, 0.9);
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  }
+}
+.billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .unit-box .ripple-animation-wrapper {
+  width: 16px;
+  height: 16px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .unit-box .ripple-animation-wrapper .ripple {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 6px;
+  width: 6px;
+  color: #333;
+  background-color: #DB1D28;
+  box-shadow: 0 0 0px 0px rgba(219, 29, 40, 0.8);
+  cursor: pointer;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transition: 250ms color;
+  -webkit-transition: 250ms color;
+  -moz-transition: 250ms color;
+  -ms-transition: 250ms color;
+  -o-transition: 250ms color;
+  animation-name: wave;
+  animation-duration: 1.4s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes wave {
+  0% {
+    box-shadow: 0 0 0px 0px rgba(219, 29, 40, 0.8);
+  }
+  100% {
+    box-shadow: 0 0 0px 6px rgba(219, 29, 40, 0);
+  }
+}
 .billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .unit-box p {
   margin-bottom: 0;
   color: rgba(0, 0, 0, 0.6);
@@ -1041,7 +1366,7 @@ header .scrolled {
 .billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .electricity-billed-box .right-billed-box p {
   margin-bottom: 0;
   color: rgba(0, 0, 0, 0.6);
-  font-size: 16px;
+  font-size: 12px;
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
@@ -1582,6 +1907,19 @@ header .scrolled {
     font-size: 14px;
     line-height: 14.839px;
   }
+}
+.who-we-are-section .who-we-are-inner .right-box .transparency-outer-box .transparency-inner-box .top-transparency-box .btn-bg {
+  background: #23282F;
+}
+.who-we-are-section .who-we-are-inner .right-box .transparency-outer-box .transparency-inner-box .top-transparency-box .btn-bg .image-box {
+  border: 0.578px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.1);
+}
+.who-we-are-section .who-we-are-inner .right-box .transparency-outer-box .transparency-inner-box .top-transparency-box .btn-bg .image-box svg {
+  color: #fff;
+}
+.who-we-are-section .who-we-are-inner .right-box .transparency-outer-box .transparency-inner-box .top-transparency-box .btn-bg h5 {
+  color: white;
 }
 .who-we-are-section .who-we-are-inner .right-box .transparency-outer-box .transparency-inner-box .center-button-box .ripple-button {
   text-align: center;
