--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -206,6 +206,142 @@ header {
               // Style 
             }
           }
+
+          // Dropdown 
+          .dropdownwrapper {
+            // position: relative;
+            // margin-right: 10px;
+            position: relative;
+
+            a {
+              position: relative;
+              display: flex;
+              align-items: center;
+              // text-shadow: none;
+
+              span {
+                // position: absolute;
+                // right: -20px;
+                // top: 50%;
+                // transform: translateY(-50%);
+                // z-index: 1;
+
+                // @media(max-width: 1199px) {
+                //   right: -14px;
+                // }
+              }
+            }
+
+            &:hover {
+              .dropdown-menu-wrapper {
+                visibility: visible;
+                opacity: 1;
+                // transform: translateY(0px);
+                transform: translate(-50%, 0px);
+              }
+            }
+
+            .dropdown-menu-wrapper {
+              // border-radius: 9px;
+              // padding: 15px;
+              background-color: $white;
+              // margin-top: 5px;
+              position: absolute;
+              left: 50%;
+              // transform: translateX(-50%);
+              // top: calc(100% + 5px);
+              border-radius: 12px;
+              border: 1px solid #DDD;
+              background: #FFF;
+              box-shadow: 15px 15px 60px 0px rgba(133, 133, 133, 0.10);
+              top: 100%;
+              width: 216px;
+              content: "";
+              // display: flex;
+              // flex-direction: row;
+              // justify-content: space-between;
+              transition: 0.3s ease-in-out;
+              transform: translate(-50%, 10px);
+              visibility: hidden;
+              opacity: 0;
+              // gap: 5px;
+
+
+              @media(max-width: 1024px) {
+                display: none;
+              }
+
+              .dropdown-box {
+
+                // padding: 0 0 0 10px;
+                @media(max-width: 1199px) {
+                  padding-left: 0;
+                }
+
+                &:last-child {
+                  margin-right: 0;
+                }
+              }
+
+              ul {
+                li {
+                  margin: 0;
+                  display: block;
+                  border-bottom: 1px solid #ddd;
+
+                  &:last-child {
+                    border-bottom: 0px solid transparent;
+                  }
+
+                  a {
+                    width: 100%;
+                    padding: 15px;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 15px;
+                    color: $black;
+                    font-weight: 400;
+                    line-height: 26px;
+
+                    &::before {
+                      display: none;
+                    }
+
+                    .image-box {
+                      padding: 9px;
+                      width: 36px;
+                      height: 36px;
+                      display: flex;
+                      justify-content: center;
+                      align-items: center;
+                      border-radius: 4px;
+                      border: 1px solid #ddd;
+                      background-color: $white;
+                      transition: 0.3s ease-in-out;
+
+                      img {
+                        width: 18px;
+                      }
+                    }
+
+                    &:hover {
+                      text-decoration: underline;
+                      font-weight: 500;
+
+                      .image-box {
+                        background-color: #f5f6f8;
+                      }
+                    }
+                  }
+
+                  .active {}
+                }
+              }
+            }
+          }
+
+          // Dropdown 
         }
       }
 
@@ -330,7 +466,8 @@ header {
           height: 100vh;
 
           .offcanvas-header {
-            margin-bottom: 80px;
+            // margin-bottom: 80px;
+            margin-bottom: 34px;
 
             .offcanvas-title {
               a {
@@ -372,6 +509,11 @@ header {
           }
 
           .offcanvas-body {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding-bottom: 50px;
+
             .menu-wrapper {
               ul {
                 margin: 0;
@@ -379,6 +521,7 @@ header {
 
                 li {
                   list-style: none;
+                  margin-bottom: 15px;
 
                   a {
                     display: block;
@@ -392,6 +535,188 @@ header {
                     &:hover {
                       color: $black;
                     }
+                  }
+                  // Dropdown Mobile Menu 
+                  h2 {
+                    &:focus {
+                      border: none;
+                      box-shadow: none;
+                      outline: none;
+                    }
+                  }
+    
+                  button {
+                    color: rgba(0, 0, 0, 0.80);
+                    font-weight: 500;
+                    padding: 0px;
+                    background-color: transparent;
+                    font-size: 16px;
+                    // border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                    border-radius: 0;
+    
+                    position: relative;
+                    transition: 0.3s ease-in-out;
+    
+                    &:hover {}
+    
+                    &:focus {
+                      border: none;
+                      box-shadow: none;
+                      outline: none;
+                    }
+                  }
+    
+                  .active {}
+    
+                  .accordion-body {
+                    margin-top: 15px;
+                    padding: 0;
+                    border: 1px solid #ddd;
+                    background-color: $white;
+                    border-radius: 8px;
+                    box-shadow: 15px 15px 60px 0px rgba(133, 133, 133, 0.10);
+                    ul{
+                      li{
+                        border-bottom: 1px solid #ddd;
+                        margin-bottom: 0;
+                        &:last-child{
+                          border-bottom: 0px solid transparent;
+                        }
+                        a {
+                          width: 100%;
+                          padding: 12px;
+                          display: flex;
+                          flex-direction: row;
+                          align-items: center;
+                          gap: 15px;
+                          color: $black;
+                          font-weight: 400;
+                          line-height: 26px;
+      
+                          &::before {
+                            display: none;
+                          }
+      
+                          .image-box {
+                            padding: 9px;
+                            width: 36px;
+                            height: 36px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            border-radius: 4px;
+                            border: 1px solid #ddd;
+                            background-color: $white;
+                            transition: 0.3s ease-in-out;
+      
+                            img {
+                              width: 18px;
+                            }
+                          }
+      
+                          &:hover {
+                            text-decoration: underline;
+                            font-weight: 500;
+      
+                            .image-box {
+                              background-color: #f5f6f8;
+                            }
+                          }
+                          &:focus{
+                            text-decoration: underline;
+                            .image-box{
+                              background-color: #f5f6f8;
+                            }
+                          }
+                        }
+                      }
+                    }
+
+                  }
+    
+                  .accordion-button::after {
+                    font-size: 24px;
+                    background-image: unset;
+                    // content: "\e145";
+                    content: "\e313";
+                    position: absolute;
+                    right: 0;
+                    // top: 50%;
+                    transform: translateY(-25%);
+                    font-family: "Material Icons";
+                    color: rgba(0, 0, 0, 0.80);
+                  }
+    
+                  .accordion-button:not(.collapsed) {
+                    box-shadow: none;
+                    color: rgba(0, 0, 0, 0.8);
+                    
+                  }
+    
+                  .accordion-button:not(.collapsed)::after {
+                    content: "\e316";
+                  }
+    
+                  .accordion {
+                    background-color: transparent;
+    
+                    .accordion-item {
+                      background-color: transparent;
+                      border: none;
+    
+                      .accordion-header {
+                        &:focus {
+                          border: none;
+                          box-shadow: none;
+                          outline: none;
+                        }
+                      }
+                    }
+                  }
+                  // Dropdown Mobile Menu 
+                }
+              }
+            }
+
+            .mobile-menu-link {
+              a {
+                display: block;
+                width: 100%;
+                text-align: center;
+                // background-color: $theme-color;
+                line-height: 26px;
+                font-weight: 500;
+                color: $white;
+                padding: 10px 29px;
+                border: 1px solid $theme-color;
+                border-radius: 8px;
+                text-decoration: none;
+                transition: 0.3s ease-in-out;
+                overflow: hidden;
+                position: relative;
+                z-index: 1;
+
+                &::before {
+                  background-color: $theme-color;
+                  z-index: -1;
+                  position: absolute;
+                  // top: 0;
+                  right: 0;
+                  bottom: 0;
+                  content: "";
+                  width: 110%;
+                  height: 110%;
+                  transition: 0.3s ease-in-out;
+                  border-top-left-radius: 8px;
+                  border-bottom-left-radius: 8px;
+                }
+
+                &:hover {
+                  color: $theme-color;
+
+                  &::before {
+                    width: 0;
+                    // height: 0;
                   }
                 }
               }
@@ -1115,6 +1440,138 @@ header {
                 }
               }
 
+              .dot-animation-box {
+                // background-color: #DB1D28;
+                width: 16px;
+                height: 16px;
+                border-radius: 50%;
+                position: relative;
+                z-index: 1;
+                overflow: hidden;
+
+                .dot-box {
+                  width: 6px;
+                  height: 6px;
+                  background-color: #DB1D28;
+                  border-radius: 50%;
+                  position: absolute;
+                  left: 50%;
+                  top: 50%;
+                  transform: translate(-50%, -50%);
+                }
+
+                .dot-animation {
+                  width: 16px;
+                  height: 16px;
+                  border-radius: 50%;
+                  content: "";
+                  // background-color: #DB1D28;
+                  background-color: rgba(219, 29, 40, .70);
+                  z-index: 1;
+                  // opacity: 0;
+                  opacity: 0;
+                  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                  -webkit-animation: waves 2s ease-in-out infinite;
+                  animation: waves 2s ease-in-out infinite;
+                }
+
+
+
+                // &::after {
+                //   position: absolute;
+                //   left: 50%;
+                //   top: 50%;
+                //   transform: translate(-50%, -50%);
+                //   width: 16px;
+                //   height: 16px;
+                //   border-radius: 50%;
+                //   content: "";
+                //   background-color: #DB1D28;
+                //   z-index: 1;
+                //   background-color: #DB1D28;
+                //   // opacity: 0;
+                //   opacity: 0.3;
+                //   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                //   -webkit-animation: waves 3s ease-in-out infinite;
+                //   animation: waves 3s ease-in-out infinite;
+                // }
+              }
+
+              @keyframes waves {
+                0% {
+                  -webkit-transform: scale(0.2, 0.2);
+                  transform: scale(0.2, 0.2);
+                  opacity: 0;
+                  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                }
+
+                50% {
+                  // opacity: 0.9;
+                  opacity: 1;
+                  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+                }
+
+                100% {
+                  -webkit-transform: scale(0.9, 0.9);
+                  transform: scale(0.9, 0.9);
+                  opacity: 0;
+                  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+                }
+              }
+
+              // New Animation 
+              .ripple-animation-wrapper {
+                width: 16px;
+                height: 16px;
+                overflow: hidden;
+                border-radius: 50%;
+                margin: 0 auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .ripple {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  height: 6px;
+                  width: 6px;
+                  // margin: 0 20px;
+                  color: #333;
+                  background-color: #DB1D28;
+                  box-shadow: 0 0 0px 0px rgba(219, 29, 40, .80);
+                  cursor: pointer;
+                  border-radius: 50%;
+                  -webkit-border-radius: 50%;
+                  -moz-border-radius: 50%;
+                  -ms-border-radius: 50%;
+                  -o-border-radius: 50%;
+                  transition: 250ms color;
+                  -webkit-transition: 250ms color;
+                  -moz-transition: 250ms color;
+                  -ms-transition: 250ms color;
+                  -o-transition: 250ms color;
+                  animation-name: wave;
+                  animation-duration: 1.4s;
+                  animation-timing-function: linear;
+                  animation-iteration-count: infinite;
+                }
+              }
+
+              @keyframes wave {
+                0% {
+                  box-shadow: 0 0 0px 0px rgba(219, 29, 40, .80);
+                }
+
+                100% {
+                  box-shadow: 0 0 0px 6px rgba(219, 29, 40, 0);
+                }
+              }
+
+
+              // New Animation 
+
+
               p {
                 margin-bottom: 0;
                 color: rgba(0, 0, 0, 0.60);
@@ -1178,7 +1635,7 @@ header {
                 p {
                   margin-bottom: 0;
                   color: rgba(0, 0, 0, 0.60);
-                  font-size: 16px;
+                  font-size: 12px;
                   font-style: normal;
                   font-weight: 500;
                   line-height: 20px;
@@ -1757,6 +2214,25 @@ header {
                   font-size: 14px;
                   line-height: 14.839px;
                 }
+              }
+            }
+
+            .btn-bg {
+              background: #23282F;
+
+              .image-box {
+                border: 0.578px solid rgba(255, 255, 255, 0.10);
+                background: rgba(255, 255, 255, 0.10);
+
+                svg {
+                  color: #fff;
+                }
+
+                img {}
+              }
+
+              h5 {
+                color: $white;
               }
             }
           }
